--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 </head>
 <body>
   
+  <div class="container">
+    
+    <h1 class="text-center py-5"><strong>FizzBuzzDOM</strong></h1>
+    <div class="row">
+    </div>
+
+  </div>
 
   <script src="js/script.js"></script>
 </body>
